[package]
name = "bevy_stream_dingtalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bevy = { version = "0.13.2", features = [] }
bevy_eventwork = { version = "0.8.0", default-features = false }
bevy_eventwork_mod_websockets = "0.1.0"
chrono = "0.4.37"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.69"
url = "2.5.0"
