[package]
name = "bevy_stream_dingtalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-broadcast = "0.7.0"
bevy = { version = "0.13.2", features = [] }
chrono = "0.4.37"
futures = "0.3.30"
reqwest = {version = "0.12.3", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.69"
url = "2.5.0"
strum = {version = "0.26.1", features = ["derive"]}
native-tls = "0.2.11"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls-vendored"]}
tokio-util = {version = "0.7.10", features = ["io"]}
log = "0.4.21"
rand = "0.8.5"
